<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ConeCalculator"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <ImageButton
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back_icon"
                android:background="@null"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_cone"
                android:textSize="25sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/cone"
                android:layout_alignParentStart="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/designations"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/radius"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/generatrix"
                    android:textSize="25sp" />

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="3px"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_data"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/h"
                        android:textSize="25sp"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/h_value"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="numberDecimal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/r"
                        android:textSize="25sp"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/r_value"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="numberDecimal"/>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="3px"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculation"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/base_area"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/base_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/side_area"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/side_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/full_area"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/full_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/v"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/l"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/generator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"/>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:strokeColor="@color/black"
            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeWidth="1dp"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/calculate"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>