<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuadraticEquationCalculator"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <ImageButton
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back_icon"
                android:background="@null"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_equation"
                android:textSize="25sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/quadratic_equation"
            android:layout_marginHorizontal="20dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="3px"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_data"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/a"
                        android:textSize="25sp"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/a_value"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="numberSigned"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/b"
                        android:textSize="25sp"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/b_value"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="numberSigned"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/c"
                        android:textSize="25sp"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/c_value"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="numberSigned"/>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="3px"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculation"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/x1"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/x1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/x2"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/x2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"/>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:strokeColor="@color/black"
            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeWidth="1dp"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/calculate"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>